# Ubib

./: .gitignore  LICENSE  README.md  SOURCES.md  pyproject.toml  requirements.txt
src/ubib/: __init__.py  api.py  catalog.py  config.py  storage.py
src/ubib/data/: config.template.toml  metadata.xlsx
src/ubib/sources/: __init__.py  _excel.py  _http.py  abs.py  anac.py  anp.py  banxico.py  base.py  bcch.py  bea.py  bloomberg.py  bls.py  caged.py  cielo.py  comexstat.py  ecb.py  eurostat.py  fred.py  imf.py  ine_spain.py  inegi.py  ipea.py  olinda.py  ons.py  sgs.py  sidra.py  statcan.py  tesouro_direto.py  tesouro_rmd.py  tesouro_rtn.py  us_census.py  worldbank.py
src/ubib/transform/: __init__.py  frequency.py
tests/: test_ubib.py
